--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-email: 'zerostaticthemes@gmail.com'
+email: 'info@newpallabs.com'
 phone: 'XXXX XXX XXX'
-businessName: 'Hugo Serif'
+businessName: 'Newpal Labs'
 address: ''
